[package]
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
description = "env-type is a library to define environment variables as types."
documentation = "https://docs.rs/env-type"
license = "MIT"
repository = "https://github.com/ynishi/env-type"
readme = "README.md"
name = "env-type"
version = "0.1.0"
edition = "2021"

[dependencies]
strum = { version = "0.26.3", features = ["derive"] }
