[package]
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
description = "env-type is a library to define environment variables as types."
documentation = "https://docs.rs/env-type"
license = "MIT"
repository = "https://github.com/ynishi/env-type"
readme = "README.md"
name = "env-type"
version = "0.2.0"
edition = "2021"

[features]
default = []
shuttle = ["shuttle-runtime"]
all = ["shuttle"]

[dependencies]
shuttle-runtime = { version = "0.47.0", optional = true }
strum = { version = "0.26.3", features = ["derive"] }
